Fixed sub div being invisible.

--- a/index.css
+++ b/index.css
@@ -5,6 +5,7 @@ body, #video {
 }
 
 .zoomed {
+	height: 100%;
 	transform-origin: 50% 0%;
 	-moz-transform-origin: 50% 0%;
 	-webkit-transform-origin: 50% 0%;
